# fastapi-boilerplate

./: Dockerfile  compose.yaml  pyproject.toml
src/app/: main.py
src/app/views/: user.py
src/lib/: database.py
src/lib/domain/: users.py
src/utils/: constants.py
